# rdfdf

./: .gitignore  .gitlab-ci.yml  README.md  example.py  pyproject.toml  rdfdf.py  requirements.txt  setup.py
aux/: rdfdf_utils.py
examples/: example_1.py
helpers/: importers.py  rdfdf_utils.py
rdfdf/: rdfdf.py
rdfdf/examples/: example_1.py
tests/: example.py
tests/examples/: example_1.py  example_2.py
tests/test_corpus_table/: rules.py  table_partitions.py  test_corpus_table.py
tests/test_corpus_table/target_graphs/: target_corpus_acronym.ttl  target_corpus_api.ttl  target_corpus_language.ttl  target_corpus_license.ttl  target_corpus_link.ttl  target_corpus_name.ttl
tests/test_data/: test.csv
