[tool.poetry]
name = "rdfdf"
version = "0.1.0"
description = ""
authors = ["Lukas Plank <lupl@tuta.io>"]
license = "GPL3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
rdflib = "^6.3.2"
pandas = "^2.0.1"
langcodes = "^3.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
